# pywatch

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
pywatch/: __main__.py  cli.py  watcher.py
