[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pywatch"
version = "0.1.0"
description = "Auto-run commands when files change — because you have better things to do."
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "watch",
    "file-watcher",
    "auto-reload",
    "cli",
    "developer-tools",
    "python",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/FreeAutomation-Tech/pywatch"
Repository = "https://github.com/FreeAutomation-Tech/pywatch"
Issues = "https://github.com/FreeAutomation-Tech/pywatch/issues"

[project.scripts]
pywatch = "pywatch.cli:main"

[tool.setuptools.packages.find]
include = ["pywatch*"]
